# sliver-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: delivery.md  integration.md  live-test.md  writeup-format.md
proto/mcpclientpb/: client.proto
proto/mcpcommonpb/: common.proto
scripts/: build_pb.sh  smoke.py
sliver_mcp/: __init__.py  errors.py  handoff.py  implant.py  manager.py  safety.py  serializers.py  server.py
sliver_mcp/_pb/: __init__.py
sliver_mcp/_pb/mcpclientpb/: client_pb2.py
sliver_mcp/_pb/mcpcommonpb/: common_pb2.py
tests/: conftest.py  test_beacon_tasks.py  test_check_server.py  test_connection.py  test_fileops.py  test_handoff.py  test_implants.py  test_listeners.py  test_manager.py  test_pool.py  test_pool_stale.py  test_port443.py  test_safety.py  test_sessions.py
