[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sliver-mcp"
version = "0.1.0"
description = "Model Context Protocol server for the Sliver C2 framework (authorized adversary-emulation research)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "sliver", "c2", "red-team", "adversary-emulation"]
dependencies = [
    "mcp>=1.2",
    # sliver-py 0.0.19 verified against Sliver v1.7.x. Pinned low bound; the
    # whole sliver-py surface is isolated behind manager.py / implant.py.
    "sliver-py>=0.0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sliver-mcp = "sliver_mcp.server:main"

[tool.setuptools.packages.find]
include = ["sliver_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
